--- a/app/globals.css
+++ b/app/globals.css
@@ -10,7 +10,7 @@
   --card-foreground: 0 0% 0%;
   --popover: 0 0% 100%;
   --popover-foreground: 0 0% 0%;
-  --primary: 47 100% 50%;
+  --primary: 0, 0%, 0%;
   --primary-foreground: 0 0% 0%;
   --secondary: 0 0% 96%;
   --secondary-foreground: 0 0% 0%;
